# Simple_Face_Recognition

./: CMakeLists.txt  CMakeUserPresets.json  CameraWidget.cpp  CameraWidget.h  CameraWidget.ui  FaceDetector.cpp  FaceDetector.h  README.md  main.cpp
